[package]
name = "gfautil"
version = "0.2.0"
authors = ["christian <christian@chfi.se>"]
description = "Command line tools for working with GFA files and related formats."
edition = "2018"
license = "MIT"
repository = "https://github.com/chfi/rs-gfa-utils"
readme = "readme.md"
keywords = ["bioinformatics", "graph"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
bstr = "0.2"
fnv = "1.0"
itertools = "0.9"

clap = "2.33"
structopt = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"

bio = "0.32"
gfa = "0.8"
handlegraph = "0.5"
saboten = "0.0.1"


[[bin]]
name = "gfautil"
test = true
