[package]
name = "gfautil"
version = "0.4.0-alpha.4"
authors = ["christian <christian@chfi.se>"]
description = "Command line tools for working with GFA files and related formats."
edition = "2018"
license = "MIT"
repository = "https://github.com/chfi/rs-gfa-utils"
readme = "readme.md"
keywords = ["bioinformatics", "graph"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4"
bstr = "0.2"
fnv = "1.0"

clap = "2.33"
structopt = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
indicatif = { version = "0.15", features = ["rayon"] }

gfa = { version = "0.10", features = ["serde1"] }
handlegraph = "0.7.0-alpha.2"
saboten = { version = "0.1.2-alpha.2", features = ["progress_bars"] }
# saboten = { path = "../saboten", features = ["progress_bars"] }


[[bin]]
name = "gfautil"
test = true

[profile.release]
debug = true